--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "mutag": "^2.0.7",
     "react-helmet": "^6.1.0"
   }
 }
